fixed about page on smaller screens

--- a/src/style.css
+++ b/src/style.css
@@ -23,25 +23,25 @@ body {
   display: flex;
 }
 
-
 /*All for the checkout buttons*/
 .checkoutButton {
   align-items: center;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: .25rem;
+  border-radius: 0.25rem;
   box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
   box-sizing: border-box;
   color: rgba(0, 0, 0, 0.85);
   display: inline-flex;
-  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: system-ui, -apple-system, system-ui, "Helvetica Neue", Helvetica,
+    Arial, sans-serif;
   font-size: 16px;
   font-weight: 600;
   justify-content: center;
   line-height: 1.25;
   margin-right: 4em;
   min-height: 3rem;
-  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+  padding: calc(0.875rem - 1px) calc(1.5rem - 1px);
   position: relative;
   text-decoration: none;
   transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -61,14 +61,13 @@ body {
   transform: translateY(-2px);
 }
 .checkoutButton:active {
-  background-color: #F0F0F1;
+  background-color: #f0f0f1;
   border-color: rgba(0, 0, 0, 0.15);
   box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
   color: rgba(0, 0, 0, 0.65);
   transform: translateY(0);
 }
 /*Last of checkout buttons*/
-
 
 /*Sizes the Back button image*/
 .back {
@@ -84,8 +83,7 @@ body {
 /*Sizes the checkout button image*/
 
 /*Add/subtract and filter buttons*/
-.inline-block.bg-amber-600.rounded-full.px-3.py-1.text-sm.font-semibold.text-gray-700.mr-2.mt-2
-  {
+.inline-block.bg-amber-600.rounded-full.px-3.py-1.text-sm.font-semibold.text-gray-700.mr-2.mt-2 {
   background-color: rgb(176, 136, 83);
   width: 70%;
 }
@@ -101,7 +99,6 @@ body {
   background-color: burlywood;
   transform: translateY(0);
   border-top: 2px solid black;
-
 }
 
 .footer.hidden {
@@ -146,13 +143,17 @@ figure {
   padding: 0.25em;
 }
 
+
 .motto {
   font-family: "Anton", sans-serif;
   padding: 0.75em;
   margin-bottom: 0px;
 }
 #aboutLastParagraph {
-  padding-bottom: 1em;
+  padding-bottom: 4em;
+}
+.aboutPage {
+  display: flex;
 }
 
 .aboutBack {
@@ -164,13 +165,8 @@ figure {
   font-weight: 600;
   padding: 1em 1.5em;
   text-align: center;
-  text-decoration: none;
   transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
-  touch-action: manipulation;
   height: 10%;
-  max-width: 30%;
-  margin-left: 50%;
-  will-change: transform;
 }
 .aboutBack:disabled {
   pointer-events: none;
@@ -187,16 +183,7 @@ figure {
 }
 /*Last rules for about page*/
 
-
-
-
-
-
-
-
 /*Credits Page*/
-
-
 main {
   display: flex;
   justify-content: center;
@@ -253,12 +240,9 @@ main {
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
-.creditsBack:hover {
-  background-color: #ccc;
-}
-.creditsContainer{
-display:flex;
-flex-direction: row;
+.creditsContainer {
+  display: flex;
+  flex-direction: row;
 }
 .creditsBack {
   border: 2px solid black;
@@ -279,7 +263,7 @@ flex-direction: row;
 .creditsBack:disabled {
   pointer-events: none;
 }
-.creditsBack8:hover {
+.creditsBack:hover {
   color: #fff;
   background-color: #1a1a1a;
   box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
@@ -290,8 +274,6 @@ flex-direction: row;
   transform: translateY(0);
 }
 /*Last of credits page*/
-
-
 
 .viewCart {
   font-size: 2rem;
